CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(CycleDetect)

SET(CMAKE_CXX_STANDARD 14)
#set(CMAKE_VERBOSE_MAKEFILE ON)
#SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_BUILD_TYPE "Release")
message(${PROJECT_SOURCE_DIR})
SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} " -pthread")
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/tbb/build/)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/mimalloc/build/)
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
FILE(GLOB INC_SRC ${PROJECT_SOURCE_DIR}/inc/*.cpp)
SET(SRCS ${INC_SRC})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/inc)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/tbb/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/third_party/mimalloc/include)

add_executable(cycle_detect main.cpp ${SRCS})

TARGET_LINK_LIBRARIES(cycle_detect -ltbb -lmimmalloc)

